# leuvengpx

./: .gitignore  README.md  index.html  pyproject.toml
css/: style.css
data/gpx/: DE SW Eizer III.gpx  DR E Lubbeek.gpx  DR N Haacht 50K.gpx  DR N Haacht.gpx  DR N Rotselaar 38K.gpx  DR NE Aarschot.gpx  DR NE Castle of Horst.gpx  DR NE Rillaar.gpx  DR NE Vlooibergtoren II.gpx  DR NO De vogel-lokker.gpx  DR NO Houwaert.gpx  DR NW Kampenhout 40K.gpx  DR NW Schiplaken 55K.gpx  DR Noord West 40K.gpx  DR Oost Gladbeek.gpx  DR S Dion-le-mont.gpx  DR S Incourt.gpx  DR S Tout Vent.gpx  DR SE Pallox tower.gpx  DR SE Tienen.gpx  DR SW Eizer II.gpx  DR SW Eizer III.gpx  DR SW Eizer.gpx  DR SW Huldenberg.gpx  DR SW Jezus-Eik.gpx  DR W 41K.gpx  DR West.gpx  DR ZW Overijse.gpx
data/html/: DE SW Eizer III.html  DR E Gladbeek.html  DR E Gladbeek.json  DR E Gladbeek_map_profile.html  DR E Lubbeek.html  DR N 38K Rotselaar.html  DR N 50K Haacht.html  DR N Haacht 50K.html  DR N Haacht 50K.json  DR N Haacht 50K_map_profile.html  DR N Haacht.gpx.html  DR N Haacht.html  DR N Haacht.json  DR N Haacht_map_profile.html  DR N Rotselaar 38K.html  DR N Rotselaar 38K.json  DR N Rotselaar 38K_map_profile.html  DR NE Aarschot.html  DR NE Castle of Horst.html  DR NE De vogel-lokker.html  DR NE De vogel-lokker.json  DR NE De vogel-lokker_map_profile.html  DR NE Houwaert.html  DR NE Houwaert.json  DR NE Houwaert_map_profile.html  DR NE Rillaar.html  DR NW 55K.html  (+55 more)
src/: check_gpx_filenames.py  generate_html_from_gpx.py  overview_map.py
tests/: test_generate_html_from_gpx.py  test_overview_map.py
(+3 files in other folders)
