[tool.poetry]
name = "leuvengpx"
version = "0.1.0"
description = "A Python project for generating maps from gpx"
authors = ["Arthur Dent <arthur@dent.space>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
folium = "^0.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.10.1"
pytest = "^7.3.1"
pre-commit = "^3.3.2"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
